@@ -1,25 +1,24 @@
 package network
 
 import (
-	"time"
-	"sort"
-	"sync"
 	"bytes"
 	"encoding/binary"
-	"github.com/piotrnar/gocoin/lib/others/qdb"
-	"github.com/piotrnar/gocoin/lib/btc"
-	"github.com/piotrnar/gocoin/lib/others/sys"
+	"fmt"
 	"github.com/piotrnar/gocoin/client/common"
+	"github.com/piotrnar/gocoin/lib/btc"
 	"github.com/piotrnar/gocoin/lib/others/peersdb"
+	"github.com/piotrnar/gocoin/lib/others/qdb"
+	"github.com/piotrnar/gocoin/lib/others/sys"
+	"sort"
+	"sync"
+	"time"
 )
-
 
 var (
-	ExternalIp4 map[uint32][2]uint = make(map[uint32][2]uint) // [0]-count, [1]-timestamp
-	ExternalIpMutex sync.Mutex
+	ExternalIp4            map[uint32][2]uint = make(map[uint32][2]uint) // [0]-count, [1]-timestamp
+	ExternalIpMutex        sync.Mutex
 	ExternalIpExpireTicker int
 )
-
 
 func ExternalAddrLen() (res int) {
 	ExternalIpMutex.Lock()
@@ -28,37 +27,51 @@ func ExternalAddrLen() (res int) {
 	return
 }
 
-
 type ExternalIpRec struct {
-	IP uint32
+	IP  uint32
 	Cnt uint
 	Tim uint
 }
-
 
 // Returns the list sorted by "freshness"
 func GetExternalIPs() (arr []ExternalIpRec) {
 	ExternalIpMutex.Lock()
 	defer ExternalIpMutex.Unlock()
-	if len(ExternalIp4) > 0 {
-		arr = make([]ExternalIpRec, len(ExternalIp4))
-		var idx int
-		for ip, rec := range ExternalIp4 {
-			arr[idx].IP = ip
-			arr[idx].Cnt = rec[0]
-			arr[idx].Tim = rec[1]
-			idx++
+
+	arr = make([]ExternalIpRec, 0, len(ExternalIp4)+1)
+	var arx *ExternalIpRec
+
+	if external_ip := common.GetExternalIp(); external_ip != "" {
+		var a, b, c, d int
+		if n, _ := fmt.Sscanf(external_ip, "%d.%d.%d.%d", &a, &b, &c, &d); n == 4 && (uint(a|b|c|d)&0xffffff00) == 0 {
+			arx = new(ExternalIpRec)
+			arx.IP = (uint32(a) << 24) | (uint32(b) << 16) | (uint32(c) << 8) | uint32(d)
+			arx.Cnt = 1e6
+			arx.Tim = uint(time.Now().Unix()) + 60
+			arr = append(arr, *arx)
 		}
-		sort.Slice(arr, func (i, j int) bool {
-			if (arr[i].Cnt > 3 && arr[j].Cnt > 3 || arr[i].Cnt==arr[j].Cnt) {
-				return arr[i].Tim > arr[j].Tim
-			}
-			return arr[i].Cnt > arr[j].Cnt
-		})
 	}
+
+	if len(ExternalIp4) > 0 {
+		for ip, rec := range ExternalIp4 {
+			if arx != nil && arx.IP==ip {
+				continue
+			}
+			arr = append(arr, ExternalIpRec{IP:ip, Cnt:rec[0], Tim:rec[1]})
+		}
+
+		if len(arr) > 1 {
+			sort.Slice(arr, func(i, j int) bool {
+				if arr[i].Cnt > 3 && arr[j].Cnt > 3 || arr[i].Cnt == arr[j].Cnt {
+					return arr[i].Tim > arr[j].Tim
+				}
+				return arr[i].Cnt > arr[j].Cnt
+			})
+		}
+	}
+
 	return
 }
-
 
 func BestExternalAddr() []byte {
 	arr := GetExternalIPs()
@@ -70,7 +83,7 @@ func BestExternalAddr() []byte {
 		if uint(time.Now().Unix())-worst.Tim > 3600 {
 			common.CountSafe("ExternalIPExpire")
 			ExternalIpMutex.Lock()
-			if ExternalIp4[worst.IP][0]==worst.Cnt {
+			if ExternalIp4[worst.IP][0] == worst.Cnt {
 				delete(ExternalIp4, worst.IP)
 			}
 			ExternalIpMutex.Unlock()
@@ -81,24 +94,23 @@ func BestExternalAddr() []byte {
 	binary.LittleEndian.PutUint64(res[0:8], common.Services)
 	// leave ip6 filled with zeros, except for the last 2 bytes:
 	res[18], res[19] = 0xff, 0xff
-	if len(arr)>0 {
+	if len(arr) > 0 {
 		binary.BigEndian.PutUint32(res[20:24], arr[0].IP)
 	}
 	binary.BigEndian.PutUint16(res[24:26], common.DefaultTcpPort())
 	return res
 }
 
-
 func (c *OneConnection) SendAddr() {
 	pers := peersdb.GetBestPeers(MaxAddrsPerMessage, nil)
-	maxtime := uint32(time.Now().Unix()+3600)
-	if len(pers)>0 {
+	maxtime := uint32(time.Now().Unix() + 3600)
+	if len(pers) > 0 {
 		buf := new(bytes.Buffer)
 		btc.WriteVlen(buf, uint64(len(pers)))
 		for i := range pers {
 			if pers[i].Time > maxtime {
 				println("addr", i, "time in future", pers[i].Time, maxtime, "should not happen")
-				pers[i].Time = maxtime-7200
+				pers[i].Time = maxtime - 7200
 			}
 			binary.Write(buf, binary.LittleEndian, pers[i].Time)
 			buf.Write(pers[i].NetAddr.Bytes())
@@ -107,9 +119,8 @@ func (c *OneConnection) SendAddr() {
 	}
 }
 
-
 func (c *OneConnection) SendOwnAddr() {
-	if ExternalAddrLen()>0 {
+	if ExternalAddrLen() > 0 {
 		buf := new(bytes.Buffer)
 		btc.WriteVlen(buf, uint64(1))
 		binary.Write(buf, binary.LittleEndian, uint32(time.Now().Unix()))
@@ -125,7 +136,7 @@ func (c *OneConnection) ParseAddr(pl []byte) {
 	for i := 0; i < int(cnt); i++ {
 		var buf [30]byte
 		n, e := b.Read(buf[:])
-		if n!=len(buf) || e!=nil {
+		if n != len(buf) || e != nil {
 			common.CountSafe("AddrError")
 			c.DoS("AddrError")
 			//println("ParseAddr:", n, e)
@@ -145,7 +156,7 @@ func (c *OneConnection) ParseAddr(pl []byte) {
 				if v != nil {
 					a.Banned = peersdb.NewPeer(v[:]).Banned
 				}
-				a.Time = uint32(time.Now().Add(-5*time.Minute).Unix()) // add new peers as not just alive
+				a.Time = uint32(time.Now().Add(-5 * time.Minute).Unix()) // add new peers as not just alive
 				if a.Time > uint32(time.Now().Unix()) {
 					println("wtf", a.Time, time.Now().Unix())
 				}
